tests/rosetta/out/Pascal/circles-of-given-radius-through-two-points.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/circles-of-given-radius-through-two-points.pas
circles-of-given-radius-through-two-points.pas(19,8) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(23,12) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(23,12) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(23,22) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(23,16) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(23,22) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(26,13) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
circles-of-given-radius-through-two-points.pas(36,70) Error: Identifier not found "any"
circles-of-given-radius-through-two-points.pas(36,73) Error: Type identifier expected
circles-of-given-radius-through-two-points.pas(52,15) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crc9F312717"
circles-of-given-radius-through-two-points.pas(62,8) Error: Incompatible types: got "Point" expected "Variant"
circles-of-given-radius-through-two-points.pas(71,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crc9F312717"
circles-of-given-radius-through-two-points.pas(137,56) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crcE41905E8"
circles-of-given-radius-through-two-points.pas(137,103) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crcE41905E8"
circles-of-given-radius-through-two-points.pas(137,150) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crcE41905E8"
circles-of-given-radius-through-two-points.pas(137,197) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crcE41905E8"
circles-of-given-radius-through-two-points.pas(137,247) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of Point" to "TArray$1$crcE41905E8"
circles-of-given-radius-through-two-points.pas(146,26) Error: Incompatible type for arg no. 2: Got "Variant", expected "Point"
circles-of-given-radius-through-two-points.pas(165) Fatal: There were 11 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
